# seg

./: README.md  build.sh  install.sh  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  codex.rs  lib.rs  main.rs  sessions.rs
src/lib/: types.ts
src/routes/: +page.svelte
