[package]
name = "seg"
version = "0.1.0"
description = "Menubar visualization of Codex CLI and Claude Code sessions"
authors = ["o98k-ok"]
edition = "2021"

[lib]
name = "seg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSResponder", "NSWindow", "NSPanel"] }
